<resources>
    <string name="app_name">AliYun ASR Demo</string>
    <string name="start_recording">开始收音</string>
    <string name="stop_recording">结束收音</string>
    <string name="hint_text">识别结果会显示在这里</string>
    <string name="label_token">临时 Token</string>
    <string name="label_app_key">AppKey</string>
    <string name="permission_rationale">请授权麦克风权限以完成语音识别</string>
    <string name="permission_denied_message">需要麦克风权限才能进行语音识别</string>
    <string name="missing_credentials">请填写 Token 与 AppKey 后再开始</string>
    <string name="status_connecting">正在连接到阿里云 ASR…</string>
    <string name="status_ready">已连接，等待语音输入…</string>
    <string name="status_recognizing">正在识别…</string>
    <string name="status_done">识别完成</string>
    <string name="status_error">出错：%1$s</string>
    <string name="status_stopped">已停止收音</string>
</resources>
